--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+    <!-- Will try to empty xml's just move them to .kt somehow -->
+
 <resources>
     <style name="Theme.MediaPlayer" parent="android:Theme.Material.Light.NoActionBar">
-        <item name="android:statusBarColor">@color/purple_700</item>
+
+    </style>
+
+    <style name="Theme.App.SplashScreen" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/splash_screen_background</item>
+        <item name="windowSplashScreenIconBackgroundColor">@color/splash_screen_background</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/play_icon_theme3_splash</item>
+        <item name="windowSplashScreenAnimationDuration">2000</item>
+        <item name="postSplashScreenTheme">@style/Theme.MediaPlayer</item>
     </style>
 </resources>
