--- a/app/src/main/res/xml/provider_paths.xml
+++ b/app/src/main/res/xml/provider_paths.xml
@@ -12,5 +12,7 @@
     <files-path
         name="files"
         path="." />
-    <external-path name="external_files" path="."/>
+    <external-path
+        name="external_files"
+        path="." />
 </paths>
