--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,7 +11,7 @@
     <style name="Theme.App.SplashScreen" parent="Theme.SplashScreen">
         <item name="windowSplashScreenBackground">@color/splash_screen_background</item>
         <item name="windowSplashScreenIconBackgroundColor">@color/splash_screen_background</item>
-        <item name="windowSplashScreenAnimatedIcon">@drawable/play_icon_theme3_splash</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/blu_splash</item>
         <item name="windowSplashScreenAnimationDuration">500</item>
         <item name="postSplashScreenTheme">@style/Theme.MediaPlayer</item>
     </style>
