--- a/base/media/medialib/src/main/res/drawable/ic_notif_pause.xml
+++ b/base/media/medialib/src/main/res/drawable/ic_notif_pause.xml
@@ -4,6 +4,6 @@
     android:width="35dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <path
-        android:fillColor="@color/white"
+        android:fillColor="@android:color/white"
         android:pathData="M6,19h4L10,5L6,5v14zM14,5v14h4L18,5h-4z" />
 </vector>
