--- a/base/media/medialib/src/main/res/drawable/ic_notif_play.xml
+++ b/base/media/medialib/src/main/res/drawable/ic_notif_play.xml
@@ -4,6 +4,6 @@
     android:width="40dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <path
-        android:fillColor="@color/white"
+        android:fillColor="@android:color/white"
         android:pathData="M8,5v14l11,-7z" />
 </vector>
