--- a/base/media/medialib/src/main/res/drawable/ic_notif_prev.xml
+++ b/base/media/medialib/src/main/res/drawable/ic_notif_prev.xml
@@ -4,6 +4,6 @@
     android:width="30dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <path
-        android:fillColor="@color/white"
+        android:fillColor="@android:color/white"
         android:pathData="M6,6h2v12L6,18zM9.5,12l8.5,6L18,6z" />
 </vector>
