--- a/feature/player/src/main/res/drawable/drag_handle_material_fill.xml
+++ b/feature/player/src/main/res/drawable/drag_handle_material_fill.xml
@@ -1,1 +1,9 @@
-<svg xmlns="http://www.w3.org/2000/svg" height="48" width="48"><path d="M8 28.5v-3h32v3Zm0-6v-3h32v3Z"/></svg>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+android:width="48dp"
+android:height="48dp"
+android:viewportWidth="48"
+android:viewportHeight="48">
+<path
+    android:fillColor="@android:color/black"
+    android:pathData="M8 28.5v-3h32v3Zm0-6v-3h32v3Z"/>
+</vector>
